copy/parameter constructor pdf 157, pdf reader 165

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "random": "c"
-    }
+        "random": "c",
+        "iostream": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
